# spellbook

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE.md  README-DEV.md  README-DOCKER.md  README.md  STYLE-GUIDE.md  TODOS.md  brand_style_guidelines.md  docker-compose.dev-services.yml  docker-compose.dev.yml  docker-compose.traefik.yml  docker-compose.yml  podman-compose.yml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: dependabot-auto-merge.yml
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
backend/: .env.dev  .env.example  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  card_index_test.sql  import_cards_fast.py  init.sql  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py  test_index.sql  test_lotus_search.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/api/v1/: admin.py  auth.py  cards.py  collections.py  scan.py  users.py
backend/app/core/: deps.py  exceptions.py  security.py  zitadel_auth.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  card.py  card_index.py  collection.py  invite.py  scan.py  user.py
backend/app/schemas/: __init__.py  auth.py  card.py  collection.py  invite.py  scan.py  user.py
backend/app/services/: card_data_service.py  card_service.py  import_export_service.py  ocr_service.py  redis_service.py  scan_service.py  scryfall_bulk_service.py  startup_service.py  storage_service.py
backend/app/tasks/: scan_tasks.py
backend/tests/: conftest.py
backend/tests/api/: test_cards.py  test_collections.py  test_health.py
docs/: API_SPEC.md  ARCHITECTURE.md  DESIGN_SYSTEM.md  PRD.md  README.md  SECURITY.md  deployment.md  feature-status.md  platform-overview.md  private-instance-template.md  routing-and-games.md  ui-design-direction.md  zitadel.md
docs/architecture/: README.md  auth.md  frontend.md  mobile-and-scan.md  postgres.md  spacetimedb.md  system-overview.md  worker.md
docs/decisions/: 0001-docs-first-knowledge-system.md  0002-android-first-mobile-and-server-side-scan.md  0003-pwa-first-mobile-and-server-side-scan.md  0004-flat-routes-with-active-game-state.md  0005-postgres-core-data-and-separated-play-app.md  ADR-template.md  README.md
docs/fonts/: mana.md
docs/integrations/: README.md
docs/meilisearch/: README.md  authentication.md  documents.md  indexes-and-settings.md  search-api.md  tasks.md
docs/operations/: README.md  deployment.md  github-automation.md  private-instance-template.md  zitadel.md
frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  index.html  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
mobile/: pubspec.yaml
scan-worker/: Dockerfile  pyproject.toml
scan-worker/src/scan_worker/: __init__.py  main.py
scan-worker/tests/: test_main.py
scripts/: seed-config.sh
spacetimedb/: Dockerfile  package-lock.json  package.json  publish.sh  spacetime.json
worker/: Dockerfile  pyproject.toml
worker/src/worker/: config.py  indexer.py  main.py  scryfall.py  transform.py
worker/tests/: test_config.py  test_indexer.py  test_main.py  test_scryfall.py  test_transform.py
worker/tests/fixtures/: adventure_card.json  bulk_data_list.json  dfc_card.json  normal_card.json  split_card.json
(+272 files in other folders)
