[project]
name = "spellbook-api"
version = "2.1.0"
description = "Spellbook Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.18",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "email-validator==2.2.0",
    "httpx==0.28.1",
    "redis==5.2.1",
    "celery==5.4.0",
    "boto3==1.35.36",
    "botocore==1.35.36",
    "aiobotocore==2.15.2",
    "aioboto3==13.2.0",
    "pillow==11.0.0",
    "opencv-python-headless==4.10.0.84",
    "pytesseract==0.3.13",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "websockets==14.1",
    "aiofiles==24.1.0",
    "python-magic==0.4.27",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "ruff>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
