[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spellbook-scan-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116",
    "orjson>=3.10",
    "uvicorn>=0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scan_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
