[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spellbook-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "meilisearch>=0.33",
    "orjson>=3.11.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.23.1",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
